create address added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.app.jwtSecret=mySecretKey123913jasdhjkahfhaskfhalslbnckhashfkahcjsahkhfeh
 spring.app.jwtExpirationMs=84000000
 spring.ecom.app.jwtCookieName=springboot-ecom-jwt
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.ecommerce.sb_ecom=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.ecommerce.sb_ecom=DEBUG
