--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=sb-ecom
 ## DataSource properties
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
+#spring.datasource.url=jdbc:mysql://ecommercedb.cg7882sksql9.us-east-1.rds.amazonaws.com:3306/ecommercedb
 spring.datasource.username=root
 spring.datasource.password=Iamkhan10
+#spring.datasource.username=itadmin
+#spring.datasource.password=RonaldoMessi
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db?useSSL=false&serverTimezone=UTC
+
+
 
 ## JPA properties
 spring.jpa.show-sql=true
@@ -21,3 +26,10 @@ spring.ecom.app.jwtCookieName=springboot-ecom-jwt
 #logging.level.org.hibernate=DEBUG
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.ecommerce.sb_ecom=DEBUG
+
+# Needed if you are using elastic beanstalk
+server.port=8080
+
+
+# FRONTEND URL
+frontend.url=http://localhost:3000/
