--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
 			<version>0.13.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>31.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
