--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,7 @@ server.port=8080
 
 # FRONTEND URL
 frontend.url=http://localhost:3000/
-
 image.base.url=http://localhost:8080/images
+
+#STRIPE KEY
+stripe.secret.key=${STRIPE_SECRET_KEY}
